--- a/report.Rmd
+++ b/report.Rmd
@@ -44,29 +44,29 @@ data <- adjusted_of_data %>%
 knitr::kable(data[1:5, 1:8])
 ```
 
-**NAME** - First and last name of player. Note, players who logged 100 or more innings in both corner outfield positions appear twice in the data set.
+**Name** - First and last name of player. Note, players who logged 100 or more innings in both corner outfield positions appear twice in the data set.
 
-**TEAM** - Team player played for. Note, players who appeared for multiple teams were removed from the data set. This was done to simplify the process of adjusting the data for Total Team Fly Balls / Inn during the regression analysis. 
+**Team** - Team player played for. Note, players who appeared for multiple teams were removed from the data set. This was done to simplify the process of adjusting the data for Total Team Fly Balls / Inn during the regression analysis. 
   
-**POSITION** - Position played by the player, either LF (left field) or RF (right field).
+**Position** - Position played by the player, either LF (left field) or RF (right field).
 
-**THROWS** - The hand the player throws with, either L (left) or R (right).
+**Throws** - The hand the player throws with, either L (left) or R (right).
 
-**THROWS (INDICATOR)** - Indicator variable used to run regression analysis on the Throws variable. Same-handed players are assigned a value of 1 and opposite-handed throwers are given a value of 0.
+**Throws (Indicator)** - Indicator variable used to run regression analysis on the Throws variable. Same-handed players are assigned a value of 1 and opposite-handed throwers are given a value of 0.
   
-**PO / INN** - PO (putouts or catches made) divided by the number of defensive innings played at the position. The average across all players in the data set is
+**PO / Inn** - PO (putouts or catches made) divided by the number of defensive innings played at the position. The average across all players in the data set is
 ```{r, echo = FALSE, results = "asis"}
 cat(round(sum(adjusted_of_data$PO.Inn)/nrow(adjusted_of_data), 4))
 ```
 .
 
-**SPRINT SPEED** - Statcast’s foot speed metric, defined as feet per second in a player’s fastest one-second window on individual plays. The average across all players in the data set is
+**Sprint Speed** - Statcast’s foot speed metric, defined as feet per second in a player’s fastest one-second window on individual plays. The average across all players in the data set is
 ```{r, echo = FALSE, results = "asis"}
 cat(round(sum(adjusted_of_data$Sprint_Speed)/nrow(adjusted_of_data), 1))
 ```
 .
 
-**TOTAL TEAM FLY BALLS / INN** - The total number of fly balls allowed by the team's pitching staff divided by the number of innings pitched, with home runs not included. Essentially, the number of balls hit in play per inning that could be catch-able fly balls. The average across all teams for the 2024 season is
+**Total Team Fly Balls / Inn** - The total number of fly balls allowed by the team's pitching staff divided by the number of innings pitched, with home runs not included. Essentially, the number of balls hit in play per inning that could be catch-able fly balls. The average across all teams for the 2024 season is
 ```{r, echo = FALSE, results = "asis"}
 cat(round(sum(team_data$cFB.IP)/nrow(team_data), 4))
 ```
@@ -114,6 +114,7 @@ print(round(summary(PO_model)$r.squared, 4))
 ```
 , meaning only about 20.65% of the variance in PO / Inn between corner outfielders in the data set is due to the variables that were tested - Throws, Sprint Speed, and Total Team Fly Balls / Inn. With an R-squared value this low, there is likely a lot of noise in the data and that other factors beyond those studied here are contributing to PO / Inn for corner outfielders.
 
-In conclusion, the relationship between same-handed corner outfielders and PO / Inn is non-zero and positive for the observations in the data set, but due to the low R-squared value in the model it is unclear how impactful handedness is. Additional research is needed. Perhaps multiple seasons could be included to increase the size of the data set, and other variables should be considered such as outfielder positioning, jump, etc. Lastly, this was a quick analysis, but a more complete study of the topic might filter fly ball observations down to only those that require the outfielder to move in the direction of the foul line, or perhaps even just those fly balls in the "shadow" or "fringe" regions of the expected catch radius given the flight and trajectory of the batted ball and the starting position, jump, and foot speed of the player.
+## Conclusion
+The relationship between same-handed corner outfielders and PO / Inn is non-zero and positive for the observations in the data set, but due to the low R-squared value in the model it is unclear how impactful handedness is. Additional research is needed. Perhaps multiple seasons could be included to increase the size of the data set, and other variables should be considered such as outfielder positioning, jump, etc. Lastly, this was a quick analysis, but a more complete study of the topic might filter fly ball observations down to only those that require the outfielder to move in the direction of the foul line, or perhaps even just those fly balls in the "shadow" or "fringe" regions of the expected catch radius given the flight and trajectory of the batted ball and the starting position, jump, and foot speed of the player.
 
 *Data Source: Fangraphs, Baseball Savant*
